Create Calendar AirDatapicker

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -106,3 +106,105 @@ input[type="radio"]:checked ~ label {
 }
 
 
+.modal {
+    .air-datepicker.-inline- {
+        background: transparent;
+    }
+    .air-datepicker-body--cells {
+        --adp-day-cell-height: 44px;
+        --adp-day-cell-width: 44px;
+        gap: 5px;
+        --adp-color: #fff;
+    }
+    .air-datepicker-cell.-day-.-disabled- {
+        opacity: 0.5;
+    }
+    .air-datepicker-nav--action svg {
+        width: 10px;
+    }
+    .air-datepicker-nav--action svg path {
+        stroke: none;
+        fill: #fff
+    }
+    .air-datepicker-nav--action {
+        --adp-nav-arrow-color: #fff;
+        width: 38px;
+        height: 38px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        path {
+            width: 8px;
+        }
+    }
+    .air-datepicker-nav--title {
+        font-size: 16px;
+    }
+    .air-datepicker-nav {
+        max-width: 256px;
+        margin: 0 auto;
+    }
+    .air-datepicker-nav--action:hover {
+        background: transparent;
+    }
+    .air-datepicker-cell {
+        color: #fff;
+        // opacity: 0.5;
+    }
+    .air-datepicker-cell.-day-.-current- {
+        position: relative;
+        &:after {
+            content: '';
+            width: 4px;
+            height: 4px;
+            display: block;
+            border-radius: 50%;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #fff;
+        }
+    }
+    .air-datepicker-body--day-name {
+        color: #fff;
+    }
+    .air-datepicker-cell.-day-.-other-month- {
+        opacity: 0;
+        visibility: hidden;
+    }
+    .air-datepicker.-inline-,
+    .air-datepicker-nav {
+        border: none;
+    }
+    .air-datepicker-nav--title,
+    .air-datepicker-nav--title i {
+        color: #fff;
+    }
+    .air-datepicker-nav--action.-disabled- {
+        visibility: visible;
+        pointer-events: none;
+        opacity: 0.2;
+    }
+    .air-datepicker-nav--title:hover {
+        background: transparent;
+    }
+    .air-datepicker-nav--action:hover,
+    .air-datepicker-cell.-day-.-focus-.-current-,
+    .air-datepicker-cell.-day-.-focus-,
+    .air-datepicker-cell.-day-.-selected- {
+        border-radius: 50%;
+        border: 1px solid #0E88EC;
+        background: transparent;
+        opacity: 1;
+        font-weight: bold;
+    }
+
+    .air-datepicker-cell.-day-.-focus-.-disabled- {
+        font-weight: normal;
+        border: none;
+        opacity: 0.5;
+        --adp-color-disabled: #fff;
+    }
+}
+
