--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -206,6 +206,8 @@ input[type="radio"]:checked ~ label {
         border: none;
         opacity: 0.5;
         --adp-color-disabled: #fff;
+    }
+}
 
 // scrollbar
 
