--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -989,12 +989,20 @@ video {
   border-width: 0;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .invisible {
   visibility: hidden;
 }
 
 .collapse {
   visibility: collapse;
+}
+
+.static {
+  position: static;
 }
 
 .fixed {
@@ -1484,6 +1492,10 @@ video {
   display: block;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1944,6 +1956,10 @@ video {
   max-width: none;
 }
 
+.max-w-\[20px\] {
+  max-width: 20px;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -2010,6 +2026,10 @@ video {
 
 .resize-none {
   resize: none;
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-1 {
@@ -2158,6 +2178,14 @@ video {
 
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .whitespace-nowrap {
@@ -2732,6 +2760,10 @@ video {
   padding-top: 23px;
 }
 
+.pb-\[15px\] {
+  padding-bottom: 15px;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2949,6 +2981,12 @@ video {
   outline-offset: 2px;
 }
 
+.blur {
+  --tw-blur: blur(8px);
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .brightness-125 {
   --tw-brightness: brightness(1.25);
   -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2969,6 +3007,11 @@ video {
 
 .invert {
   --tw-invert: invert(100%);
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter {
   -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
           filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -3634,6 +3677,10 @@ video {
     top: 70px;
   }
 
+  .md\:m-auto {
+    margin: auto;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -3746,6 +3793,22 @@ video {
 
   .md\:mt-auto {
     margin-top: auto;
+  }
+
+  .md\:mb-32 {
+    margin-bottom: 8rem;
+  }
+
+  .md\:mt-\[100px\] {
+    margin-top: 100px;
+  }
+
+  .md\:ml-auto {
+    margin-left: auto;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .md\:block {
@@ -3930,6 +3993,14 @@ video {
     max-width: none;
   }
 
+  .md\:max-w-\[30px\] {
+    max-width: 30px;
+  }
+
+  .md\:max-w-\[165px\] {
+    max-width: 165px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -3940,6 +4011,10 @@ video {
 
   .md\:grid-cols-\[repeat\(7\2c _180px\)\] {
     grid-template-columns: repeat(7, 180px);
+  }
+
+  .md\:grid-cols-\[repeat\(7\2c _minmax\(180px\2c _183px\)\)\] {
+    grid-template-columns: repeat(7, minmax(180px, 183px));
   }
 
   .md\:flex-row {
@@ -4012,6 +4087,14 @@ video {
 
   .md\:gap-\[20px\] {
     gap: 20px;
+  }
+
+  .md\:gap-\[10px\] {
+    gap: 10px;
+  }
+
+  .md\:gap-10 {
+    gap: 2.5rem;
   }
 
   .md\:gap-x-5 {
@@ -4684,6 +4767,10 @@ video {
 
   .lg\:h-auto {
     height: auto;
+  }
+
+  .lg\:max-h-\[90vh\] {
+    max-height: 90vh;
   }
 
   .lg\:w-72 {
