--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1249,6 +1249,12 @@ video {
   z-index: 3;
 }
 
+.order-1 {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -1638,6 +1644,10 @@ video {
   height: 50px;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
 .h-\[84px\] {
   height: 84px;
 }
@@ -1666,6 +1676,10 @@ video {
 
 .min-h-\[1000px\] {
   min-height: 1000px;
+}
+
+.min-h-\[60px\] {
+  min-height: 60px;
 }
 
 .min-h-screen {
@@ -1862,8 +1876,16 @@ video {
   max-width: 130px;
 }
 
+.max-w-\[141px\] {
+  max-width: 141px;
+}
+
 .max-w-\[15px\] {
   max-width: 15px;
+}
+
+.max-w-\[186px\] {
+  max-width: 186px;
 }
 
 .max-w-\[205px\] {
@@ -1872,6 +1894,10 @@ video {
 
 .max-w-\[208px\] {
   max-width: 208px;
+}
+
+.max-w-\[20px\] {
+  max-width: 20px;
 }
 
 .max-w-\[225px\] {
@@ -1898,6 +1924,10 @@ video {
   max-width: 40px;
 }
 
+.max-w-\[42px\] {
+  max-width: 42px;
+}
+
 .max-w-\[436px\] {
   max-width: 436px;
 }
@@ -1920,6 +1950,10 @@ video {
 
 .max-w-\[60px\] {
   max-width: 60px;
+}
+
+.max-w-\[72px\] {
+  max-width: 72px;
 }
 
 .max-w-\[740px\] {
@@ -1954,10 +1988,6 @@ video {
 
 .max-w-none {
   max-width: none;
-}
-
-.max-w-\[20px\] {
-  max-width: 20px;
 }
 
 .border-collapse {
@@ -2126,6 +2156,10 @@ video {
 
 .gap-\[80px\] {
   gap: 80px;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .gap-x-2 {
@@ -2423,6 +2457,10 @@ video {
   background-color: #FFFFFF1A;
 }
 
+.bg-\[url\(\'\.\/\.\.\/img\/about\/about-banner\.jpg\'\)\] {
+  background-image: url('./../img/about/about-banner.jpg');
+}
+
 .bg-\[url\(\'\.\/\.\.\/img\/about\/apartment-bgd\.jpg\'\)\] {
   background-image: url('./../img/about/apartment-bgd.jpg');
 }
@@ -2462,10 +2500,6 @@ video {
 .bg-gradient-to-t {
   background-image: -webkit-gradient(linear, left bottom, left top, from(var(--tw-gradient-stops)));
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.bg-\[url\(\'\.\/\.\.\/img\/about\/about-banner\.jpg\'\)\] {
-  background-image: url('./../img/about/about-banner.jpg');
 }
 
 .from-blue-500 {
@@ -2660,6 +2694,11 @@ video {
   padding-bottom: 60px;
 }
 
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -2706,6 +2745,10 @@ video {
 
 .pb-9 {
   padding-bottom: 2.25rem;
+}
+
+.pb-\[15px\] {
+  padding-bottom: 15px;
 }
 
 .pl-5 {
@@ -2758,10 +2801,6 @@ video {
 
 .pt-\[23px\] {
   padding-top: 23px;
-}
-
-.pb-\[15px\] {
-  padding-bottom: 15px;
 }
 
 .text-center {
@@ -3677,8 +3716,10 @@ video {
     top: 70px;
   }
 
-  .md\:m-auto {
-    margin: auto;
+  .md\:order-none {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
   }
 
   .md\:mx-auto {
@@ -3723,6 +3764,10 @@ video {
     margin-bottom: 0.75rem;
   }
 
+  .md\:mb-32 {
+    margin-bottom: 8rem;
+  }
+
   .md\:mb-4 {
     margin-bottom: 1rem;
   }
@@ -3763,12 +3808,20 @@ video {
     margin-left: 2.5rem;
   }
 
+  .md\:ml-auto {
+    margin-left: auto;
+  }
+
   .md\:mr-5 {
     margin-right: 1.25rem;
   }
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .md\:mt-12 {
@@ -3791,24 +3844,12 @@ video {
     margin-top: 1.75rem;
   }
 
-  .md\:mt-auto {
-    margin-top: auto;
-  }
-
-  .md\:mb-32 {
-    margin-bottom: 8rem;
-  }
-
   .md\:mt-\[100px\] {
     margin-top: 100px;
   }
 
-  .md\:ml-auto {
-    margin-left: auto;
-  }
-
-  .md\:mt-10 {
-    margin-top: 2.5rem;
+  .md\:mt-auto {
+    margin-top: auto;
   }
 
   .md\:block {
@@ -3819,6 +3860,10 @@ video {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+
+  .md\:grid {
+    display: grid;
   }
 
   .md\:hidden {
@@ -3873,12 +3918,20 @@ video {
     height: 70px;
   }
 
+  .md\:h-\[86px\] {
+    height: 86px;
+  }
+
   .md\:h-auto {
     height: auto;
   }
 
   .md\:h-full {
     height: 100%;
+  }
+
+  .md\:min-h-\[86px\] {
+    min-height: 86px;
   }
 
   .md\:w-14 {
@@ -3953,12 +4006,24 @@ video {
     max-width: 1200px;
   }
 
+  .md\:max-w-\[165px\] {
+    max-width: 165px;
+  }
+
+  .md\:max-w-\[186px\] {
+    max-width: 186px;
+  }
+
   .md\:max-w-\[286px\] {
     max-width: 286px;
   }
 
   .md\:max-w-\[295px\] {
     max-width: 295px;
+  }
+
+  .md\:max-w-\[30px\] {
+    max-width: 30px;
   }
 
   .md\:max-w-\[40px\] {
@@ -3981,6 +4046,10 @@ video {
     max-width: 66px;
   }
 
+  .md\:max-w-\[68px\] {
+    max-width: 68px;
+  }
+
   .md\:max-w-\[825px\] {
     max-width: 825px;
   }
@@ -3989,16 +4058,12 @@ video {
     max-width: 876px;
   }
 
+  .md\:max-w-\[98px\] {
+    max-width: 98px;
+  }
+
   .md\:max-w-none {
     max-width: none;
-  }
-
-  .md\:max-w-\[30px\] {
-    max-width: 30px;
-  }
-
-  .md\:max-w-\[165px\] {
-    max-width: 165px;
   }
 
   .md\:grid-cols-2 {
@@ -4009,12 +4074,12 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-\[repeat\(7\2c _180px\)\] {
-    grid-template-columns: repeat(7, 180px);
-  }
-
   .md\:grid-cols-\[repeat\(7\2c _minmax\(180px\2c _183px\)\)\] {
     grid-template-columns: repeat(7, minmax(180px, 183px));
+  }
+
+  .md\:grid-cols-\[repeat\(3\2c _240px\)\] {
+    grid-template-columns: repeat(3, 240px);
   }
 
   .md\:flex-row {
@@ -4077,6 +4142,10 @@ video {
     gap: 0px;
   }
 
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
   .md\:gap-2 {
     gap: 0.5rem;
   }
@@ -4085,16 +4154,12 @@ video {
     gap: 1.25rem;
   }
 
-  .md\:gap-\[20px\] {
-    gap: 20px;
-  }
-
   .md\:gap-\[10px\] {
     gap: 10px;
   }
 
-  .md\:gap-10 {
-    gap: 2.5rem;
+  .md\:gap-\[20px\] {
+    gap: 20px;
   }
 
   .md\:gap-x-5 {
@@ -4117,8 +4182,16 @@ video {
     row-gap: 3.5rem;
   }
 
+  .md\:whitespace-nowrap {
+    white-space: nowrap;
+  }
+
   .md\:rounded-2xl {
     border-radius: 1rem;
+  }
+
+  .md\:rounded-\[15px\] {
+    border-radius: 15px;
   }
 
   .md\:border-b-0 {
@@ -4220,6 +4293,16 @@ video {
     padding-bottom: 23px;
   }
 
+  .md\:py-\[15px\] {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
   .md\:pb-20 {
     padding-bottom: 5rem;
   }
@@ -4270,6 +4353,14 @@ video {
 
   .md\:pt-64 {
     padding-top: 16rem;
+  }
+
+  .md\:pt-36 {
+    padding-top: 9rem;
+  }
+
+  .md\:pt-\[310px\] {
+    padding-top: 310px;
   }
 
   .md\:text-center {
@@ -4492,6 +4583,10 @@ video {
     position: absolute;
   }
 
+  .lg\:\!bottom-\[70px\] {
+    bottom: 70px !important;
+  }
+
   .lg\:-left-36 {
     left: -9rem;
   }
@@ -4618,6 +4713,12 @@ video {
 
   .lg\:top-auto {
     top: auto;
+  }
+
+  .lg\:order-1 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 
   .lg\:col-end-1 {
@@ -4906,6 +5007,10 @@ video {
 
   .lg\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-\[repeat\(3\2c _240px\)\] {
+    grid-template-columns: repeat(3, 240px);
   }
 
   .lg\:flex-row {
@@ -5224,6 +5329,14 @@ video {
 
   .lg\:pt-\[250px\] {
     padding-top: 250px;
+  }
+
+  .lg\:pt-\[310px\] {
+    padding-top: 310px;
+  }
+
+  .lg\:pt-\[290px\] {
+    padding-top: 290px;
   }
 
   .lg\:text-left {
