--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -2823,6 +2823,10 @@ video {
   text-align: right;
 }
 
+.text-start {
+  text-align: start;
+}
+
 .font-normalidad {
   font-family: Grandis Extended, sans-serif;
 }
