--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1209,6 +1209,10 @@ video {
   top: 100%;
 }
 
+.top-\[50px\] {
+  top: 50px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -2558,6 +2562,10 @@ video {
 
 .fill-white {
   fill: #fff;
+}
+
+.fill-white\/50 {
+  fill: rgb(255 255 255 / 0.5);
 }
 
 .object-cover {
